1) Adds a new checkstyle config intended to be used with unit tests. 2) Updates the checkstyle settings for gwt-user to use two sets of rules: one for production gwt-user code and another for unit tests. 3) Updates everything under /user to pass the new checkstyle rules; note that there's a whole lot of "TODO: document me" comments that the test owners need to eventually fill in with meaningful comments. 4) In some cases, I had to turn off checkstyle completely for that compilation unit, particularly for the compiler stuff, which is actually trying to test weird code.
Review by: ecc

git-svn-id: https://google-web-toolkit.googlecode.com/svn/trunk@586 8db76d5a-ed1c-0410-87a9-c151d255dfc7